# ndim-subdivision

./: CMakeLists.txt  Jenkinsfile  README.md
blender/: import_from_dealii.blend
docker/: Dockerfile
include/: general_mesh.h  half_struct.h
scripts/: dr.sh  indent  indent-all  indent_common.sh
source/: general_mesh.cc  half_struct.cc  main.cc
tests/: CMakeLists.txt  gtest_test.cc  main.cc  test_interface.cc
